fixed overflow issue 2

--- a/client/stylesheet/velocity.css
+++ b/client/stylesheet/velocity.css
@@ -6,6 +6,7 @@
 
 html, body{
   height: 100%;
+  width: 100%;
   overflow: hidden;
 }
 body {
@@ -13,7 +14,7 @@ body {
   background-repeat: no-repeat;
   font-family: 'Open sans',sans-serif;
   height:auto;
-  
+
 }
 
 .lego {
